# farmhand

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  justfile  package.json
.github/: FUNDING.yml
.github/workflows/: build-api.yml  build-images.yml  build-queue.yml  build-ui.yml  build-web.yml  cleanup-registry.yml  deploy-staging.yml
.zed/: tasks.json
config/: api.Dockerfile  queue.Dockerfile  ui.Dockerfile
crates/common/: Cargo.toml
crates/common/migrations/: 20250209193212_abac_permissions.up.sql  20250212051114_add_user_settings.up.sql
crates/common/src/: lib.rs
crates/common/src/db/: accounts.rs  mod.rs  permissions.rs  users.rs
crates/queue/: Cargo.toml
crates/vod/: Cargo.toml
crates/vod/src/: lib.rs
k8s/base/api/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
k8s/base/queue/: configmap.yaml  deployment.yaml
k8s/base/ui/: configmap.yaml  deployment.yaml  service.yaml
k8s/overlays/staging/: ingress.yaml  kustomization.yaml
migrations/: 20241109045238_queue.down.sql  20241124231804_compresseion_cols.up.sql  20250224032704_add_stream.down.sql  20250224032704_add_stream.up.sql
services/barn/: package.json
services/barn-ui/: package.json  tailwind.config.ts
services/barn-ui/src/: app.css  app.d.ts  app.html
services/barn-ui/src/lib/: permissions.ts
services/barn-ui/src/lib/components/: Alert.svelte  Button.svelte  Datatable.svelte  FeatureCard.svelte  Footer.svelte  Form.svelte  Header.svelte  Input.svelte  MyAccount.svelte  Popup.svelte  Table.svelte  Throbber.svelte  VideoPlayer.svelte
services/barn-ui/src/lib/components/icons/: Close.svelte  Email.svelte  Pencil.svelte  Video.svelte
services/barn-ui/src/lib/server/: twitch.ts  users.ts  videos.ts
services/barn-ui/src/lib/stores/: user.ts
services/barn-ui/src/routes/: +layout.svelte  +page.svelte
services/barn-ui/src/routes/(guest)/: +layout.svelte
services/barn-ui/src/routes/(guest)/login/: +page.server.ts  +page.svelte
services/barn-ui/src/routes/(guest)/register/: +page.svelte
services/barn-ui/src/routes/(guest)/videos/: +page.server.ts  +page.svelte
services/barn-ui/src/routes/(user)/: +layout.server.ts  +layout@.svelte
services/barn-ui/src/routes/(user)/me/: +layout.server.ts  +layout@.svelte  +page.svelte
services/barn-ui/src/routes/account/: +page.svelte
services/barn-ui/src/routes/api/: +server.ts
services/barn-ui/src/routes/upload/: +page.svelte
services/barn-ui/src/routes/videos/: +page.svelte
services/barn-ui/src/routes/watch/: +page.server.ts  +page.svelte
services/barn/src/: app.html  hooks.server.ts
services/forge-queue/: Cargo.toml  README.md
services/forge-queue/src/: main.rs  queue.rs  runner.rs
services/forge/src/: main.rs  runner.rs
services/silo-api/: Cargo.toml  README.md
services/silo-api/src/: app_state.rs  config.rs  main.rs  s3.rs
services/silo-api/src/middleware/: auth.rs
services/silo-api/src/routes/: auth.rs  mod.rs  upload.rs  user.rs  video.rs
services/silo-api/src/routes/auth/: mod.rs
services/silo-api/src/routes/auth/oauth/: twitch.rs
services/silo-api/src/routes/upload/: cloud.rs  mod.rs  on_disk.rs
services/silo-api/src/twitch/eventsub/: mod.rs  receivers.rs  subscribers.rs
services/silo/src/routes/: auth.rs  mod.rs
src/: lib.rs
src/api/: app_state.rs  mod.rs
src/api/middleware/: auth.rs
src/api/routes/: health.rs  user.rs  video.rs
src/api/routes/auth/: mod.rs
src/api/routes/auth/oauth/: twitch.rs
src/api/routes/upload/: cloud.rs
src/api/twitch/eventsub/: callback.rs  mod.rs  receivers.rs  subscribers.rs
src/db/: mod.rs  streams.rs
src/error/: mod.rs  queue.rs
src/event/: mod.rs  stream.rs
src/prelude/: mod.rs
src/vendors/: mod.rs
src/vendors/twitch/: mod.rs  stream.rs  subscription.rs
src/vod/: mod.rs  stream.rs
src/workers/: events.rs  mod.rs  runner.rs
src/workers/events/: chat.rs  mod.rs  stream.rs
src/workers/queue/: mod.rs  queue.rs
src/workers/runner/: chat.rs  hls_stream.rs  mod.rs  nats.rs  queue.rs
web/: eslint.config.js  theme.ts
web/src/: app.html  hooks.server.ts
web/src/lib/components/: BrandButton.svelte  Button.svelte  Card.svelte  FeatureCard.svelte  Form.svelte  Header.svelte  Input.svelte  Throbber.svelte  VideoPlayer.svelte
web/src/lib/components/icons/: Twitch.svelte
web/src/lib/server/: twitch.ts  videos.ts
web/src/lib/stores/: user.ts
web/src/routes/: +error.svelte
web/src/routes/(guest)/: +page.svelte
web/src/routes/(guest)/health/: +server.ts
web/src/routes/(guest)/login/: +page.svelte
web/src/routes/(guest)/register/: +page.server.ts
web/src/routes/(user)/dashboard/: +page.svelte
web/src/routes/(user)/me/: +page.server.ts
(+11 files in other folders)
