[package]
name = "farmhand"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[bin]]
name = "queue"
path = "src/bin/job_runner.rs"

[[bin]]
name = "listener"
path = "src/bin/stream_listener.rs"

[[bin]]
name = "up"
path = "src/bin/up.rs"

[[bin]]
name = "down"
path = "src/bin/down.rs"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1"
aws-config = { version = "1.5.11", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.71.0"
aws-types = "1.3.3"
argon2 = { version = "0.5", features = ["password-hash"] }
axum = { version = "0.7", features = ["multipart", "tracing", "ws", "macros"] }
bytes = "1.10.0"
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3"
hex = "0.4"
hmac = "0.12.1"
jsonwebtoken = "8.1"
lazy_static = "1.4"
nanoid = "0.4.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
] }
tempfile = "3.2"
thiserror = "1"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["io"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
walkdir = "2.5.0"
async-nats = "0.38.0"
