[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-s3 = "1.66.0"
aws-config = { version = "1.5.11", features = ["behavior-version-latest"] }
aws-types = "1.3.3"
walkdir = "2.5.0"
argon2 = { version = "0.5", features = ["password-hash"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["serde"] }
nanoid = "0.4"
