[package]
name = "queue"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
common = { path = "../common" }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
ulid = { version = "1", features = ["uuid"] }
uuid = { version = "1", features = ["serde", "v4"] }
vod = { path = "../vod" }
zip = "0.6"
