[package]
name = "forge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7.9", features = ["tracing"] }
db = { path = "../../packages/db" }
queue = { path = "../../packages/queue" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
