[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart", "tracing", "ws", "macros"] }
axum-extra = "0.3"
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3"
hex = "0.4"
sha2 = "0.10"
jsonwebtoken = "8.1"
lazy_static = "1.4"
nanoid = "0.4.0"
queue = { path = "../../crates/queue" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
] }
tempfile = "3.2"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["io"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
urlencoding = "2.1"
reqwest = { version = "0.12.9", features = ["json"] }
aws-sdk-s3 = "1.66.0"
aws-config = { version = "1.5.11", features = ["behavior-version-latest"] }
aws-types = "1.3.3"
common = { path = "../../crates/common" }
